[package]
name = "yatti"
version = "0.2.0"
authors = ["François de Mareschal <francois.de-mareschal@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
